[tool.poetry]
name = "refairy_api"
version = "0.1.0"
description = ""
authors = ["sqrtpi177 <solar0037@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
sanic = "^20.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
Pygments = "^2.7.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
